// $Id$

April 2009
----------
 * Add file attached successful image (aaron).
 * Add file progress spinner images (aaron).
 * Hide our file progress indicators (aaron).
 * Documenting Drupal.behaviors.mediaBrowserHide behavior (aaron).
 * Move button/progress out of loop and back into browser (aaron).
 * Store progress message in a variable (aaron).
 * Move button/progress out of browser (aaron).
 * Slide up the sibling file browser on submit (aaron).
 * Add static $id count to media browser form for ahah wrapper (aaron).
 * Bind behavior to click, and change ahah from default mousedown (aaron).
 * Troubleshooting click-bind ahah override behavior (aaron).

March 2009
----------
 * Attempt piggyback AHAH behavior to button wrapper (see http://groups.drupal.org/node/20429) (aaron).
 * Begin mediaAhahHideBrowser (aaron).
 * Add class to ahah submit button (aaron).
 * Begin file browser indicator (aaron).
 * Drupal.behaviors.mediaDrawers (aaron).
 * Drupal.behaviors.mediaBrowserHide (aaron).
 * Drupal.behaviors.mediaGenerateMD5 (aaron).
 * Rename media/ahah path to media/js and remove args (aaron).
 * Refactor ahah (aaron).
 * Attach ahah behavior (aaron).
 * Re-add Add button (aaron).
 * Uppercase for TRUE/FALSE/NULL (aaron).
 * Fix error re. is_null(variable_get...) (aaron).
 * Documentation (aaron).
 * Begin refactor & debug ahah (aaron).
 * Documentation of media_formater_ahah_form (aaron).
 * #377050 - Intelligent Media Defaults (kwinters).

February 2009
-------------
 * Pass URI in ahah submission (aaron).
 * Capitalization (aaron).
 * Use PATHINFO_EXTENSION (aaron).
 * $formatter in media_get_applicable_formatters (aaron).
 * $uri and $file_extension in ahah (aaron).
 * $stream_id to $registration_id (aaron).
 * Roll back $default_files (aaron).

January 2009
------------
 * Add $default_files to form elements (aaron).
 * Add variable_get('media_file_list_size', 10) (aaron).
 * Add experimental hook_elements and relevant themes (aaron).