@@ -2,6 +2,7 @@
 
 April 2009
 ----------
+ * Begin creating metadata form (aaron).
  * Add file attached successful image (aaron).
  * Add file progress spinner images (aaron).
  * Hide our file progress indicators (aaron).
